[package]
name = "tusk-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tusk-rs-derive = { path = "../tusk-derive" }
tusk-rs = { path = "../tusk" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = { version = "0.8.5" }
postgres-types = { version = "0.2.9", features = ["derive"] }
