[package]
name = "tusk-rs-derive"
version = "0.1.0"
edition = "2021"
description = "Derive Macros for Tusk"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0"
syn = { version = "2.0.26", features = ["full", "printing"] }
