[package]
name = "tusk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
tokio-postgres = "0.7.6"
deadpool-postgres = { version = "0.10.2" }
postgres-openssl = "0.5.0"
openssl = "0.10.55"