[package]
name = "tusk-rs"
version = "0.0.0"
edition = "2021"
description = "Postgres-backed Web APIs"
license = "MIT"
repository = "https://github.com/jacksonzamorano/tusk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.6", features = ["runtime", "with-chrono-0_4"] }
tusk-rs-derive = { path = "../tusk-derive" }
brackets = "0.2.2"
brackets-macros = "0.2.2"
deadpool-postgres = { version = "0.10.2"}
postgres-openssl = "0.5.0"
openssl = "0.10.55"
chrono = "0.4.31"
