[package]
name = "tusk-rs"
version = "0.0.0"
edition = "2021"
description = "Postgres-backed Web APIs"
license = "MIT"
repository = "https://github.com/jacksonzamorano/tusk"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.13", features = ["runtime", "with-chrono-0_4", "with-uuid-1"] }
tusk-rs-derive = { path = "../tusk-derive" }
deadpool-postgres = { version = "0.10.2"}
postgres-openssl = "0.5.0"
openssl = "0.10.55"
chrono = "0.4.31"
uuid = "1.17.0"
